{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 19,
  "lineage": "9c6c6c7e-0106-6ac2-bead-d1af2ba5ea3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_VPC_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:internet-gateway/igw-0c5ecc50f8c7b4334",
            "id": "igw-0c5ecc50f8c7b4334",
            "owner_id": "270172373104",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5ecc50f8c7b4334",
            "id": "r-rtb-0a22f72a8cda88cd31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a22f72a8cda88cd3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.My_VPC_GW",
            "aws_route_table.public_route_table",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b71f1af3707a7fe",
            "owner_id": "270172373104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a22f72a8cda88cd3",
            "owner_id": "270172373104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03348224956743aac",
            "route_table_id": "rtb-02b71f1af3707a7fe",
            "subnet_id": "subnet-08663f00593b0795e"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.PrivateSubnet-A",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a4a8df4aa00a2e7",
            "route_table_id": "rtb-02b71f1af3707a7fe",
            "subnet_id": "subnet-06171b8b347588e41"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.PrivateSubnet-B",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a808f82839ce676",
            "route_table_id": "rtb-02b71f1af3707a7fe",
            "subnet_id": "subnet-06373bb1a0bb568c1"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.PrivateSubnet-C",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042c96a7d1486e8dc",
            "route_table_id": "rtb-0a22f72a8cda88cd3",
            "subnet_id": "subnet-0303092afa1684426"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.PublicSubnet-A",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00627f40a7501c754",
            "route_table_id": "rtb-0a22f72a8cda88cd3",
            "subnet_id": "subnet-025281102db822e1f"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.PublicSubnet-B",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a8cd6d346807d71",
            "route_table_id": "rtb-0a22f72a8cda88cd3",
            "subnet_id": "subnet-06af1438d98282300"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.PublicSubnet-C",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:security-group/sg-07880178181d6334b",
            "description": "My VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07880178181d6334b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": null,
            "owner_id": "270172373104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "My VPC Security Group",
              "Name": "My VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet-A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:subnet/subnet-08663f00593b0795e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-08663f00593b0795e",
            "map_public_ip_on_launch": false,
            "owner_id": "270172373104",
            "tags": {
              "Name": "PrivateSubnet-A"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet-B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:subnet/subnet-06171b8b347588e41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-06171b8b347588e41",
            "map_public_ip_on_launch": false,
            "owner_id": "270172373104",
            "tags": {
              "Name": "PrivateSubnet-B"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet-C",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:subnet/subnet-06373bb1a0bb568c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-06373bb1a0bb568c1",
            "map_public_ip_on_launch": false,
            "owner_id": "270172373104",
            "tags": {
              "Name": "PrivateSubnet-C"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet-A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:subnet/subnet-0303092afa1684426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.110.0/24",
            "id": "subnet-0303092afa1684426",
            "map_public_ip_on_launch": true,
            "owner_id": "270172373104",
            "tags": {
              "Name": "PublicSubnet-A"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet-B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:subnet/subnet-025281102db822e1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.111.0/24",
            "id": "subnet-025281102db822e1f",
            "map_public_ip_on_launch": true,
            "owner_id": "270172373104",
            "tags": {
              "Name": "PublicSubnet-B"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet-C",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:subnet/subnet-06af1438d98282300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.112.0/24",
            "id": "subnet-06af1438d98282300",
            "map_public_ip_on_launch": true,
            "owner_id": "270172373104",
            "tags": {
              "Name": "PublicSubnet-C"
            },
            "vpc_id": "vpc-00c581cb412432198"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:270172373104:vpc/vpc-00c581cb412432198",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a457a83d4969ddf3",
            "default_route_table_id": "rtb-0170997abd420979f",
            "default_security_group_id": "sg-07b60dfcd149352c2",
            "dhcp_options_id": "dopt-66a06e0d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00c581cb412432198",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0170997abd420979f",
            "owner_id": "270172373104",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}